# osprey

./: CMakeLists.txt
shaders/: CMakeLists.txt  model_frag.frag  model_vert.vert  textured_model_frag.frag  textured_model_vert.vert  triangle_frag.frag  triangle_vert.vert
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/gal/: CMakeLists.txt  gal_buffer.cpp  gal_buffer.h  gal_command_buffer.cpp  gal_command_buffer.h  gal_commands.h  gal_exception.h  gal_pipeline.cpp  gal_pipeline.h  gal_platform.cpp  gal_platform.h  gal_shader.cpp  gal_shader.h
src/window/: CMakeLists.txt  window.cpp  window.h  window_manager.cpp  window_manager.h
